--- a/WebAppUI/Views/Shared/_navbar.cshtml
+++ b/WebAppUI/Views/Shared/_navbar.cshtml
@@ -25,7 +25,7 @@
         <a class="navbar-brand" style="text-align:left; color: white;" href="/">E-Commerce</a>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a asp-controller="Home" asp-action="Index" class="navbarText navbar-text">Home</a>
+                <a asp-controller="Home" asp-action="Index" style="text-align:left; color: white;" class="navbarText navbar-text">Home</a>
             </li>
             @if (User.Identity.IsAuthenticated)
             {  
