--- a/WebAppUI/Views/Home/Admin.cshtml
+++ b/WebAppUI/Views/Home/Admin.cshtml
@@ -46,7 +46,7 @@
                                 <tr>
                                     <th scope="row">@item.Id</th>
                                     <td>
-                                        <img src="~/img/productImg.jpg" width="50" />
+                                        <img src="~/img/product.jpg" width="50" />
                                     </td>
                                     <td>@item.ProductName</td>
                                     <td>@item.BrandName </td>
