--- a/WebAppUI/Views/Home/SysAdmin.cshtml
+++ b/WebAppUI/Views/Home/SysAdmin.cshtml
@@ -1,8 +1,17 @@
 ﻿@model ProductListModel
 @{
-    ViewData["Title"] = " Admin Page";
+    ViewData["Title"] = " SysAdmin Page";
 }
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+<body>
 <div class="container-xxl">
     <div class="table-responsive">
         <div class="table-wrapper">
@@ -34,7 +43,7 @@
                             <tr>
                                 <th scope="row">@item.Id</th>
                                 <td>
-                                    <img src="~/img/productImg.jpg" width="50" />
+                                    <img src="~/img/product.jpg" width="50" />
                                 </td>
                                 <td>@item.ProductName</td>
                                 <td>@item.BrandName </td>
@@ -64,3 +73,4 @@
         </div>
     </div>
 </div>
+</body>
