--- a/WebAppUI/wwwroot/css/loginStyle.css
+++ b/WebAppUI/wwwroot/css/loginStyle.css
@@ -10,15 +10,6 @@ body {
     background-color: white;
 }
 
-.loginPhoto {
-    display: flex;
-    justify-content: flex-end;
-    width: 50%;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    height: 100%;
-}
 ul {
     list-style-type: none;
 }
@@ -32,14 +23,16 @@ ul {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 7rem;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
+    align-content:center;
 }
 
 .img {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
    align-items: center;
+   align-content:center;
 }
 
 .login-content {
@@ -47,6 +40,9 @@ ul {
     justify-content: center;
     align-items: center;
     text-align: center;
+    align-content:center;
+    margin-right: auto;
+    margin-left: 500px;
 }
 
 .img img {
