--- a/WebAppUI/Views/Shared/_navbar.cshtml
+++ b/WebAppUI/Views/Shared/_navbar.cshtml
@@ -6,20 +6,6 @@
          color:white;
         font-size: 15px;
     }
-    .navbar
-    {
-        color:white;
-        font-size: 15px;
-        margin:5px;
-
-    }
-    .navbarText{
-        color: white;
-        font-size: 15px;
-        text-align:center;
-
-    }
-
     ul {
         list-style-type: none;
     }
@@ -30,44 +16,44 @@
         <a class="navbar-brand" style="text-align:left; color: white;" href="/">E-Commerce</a>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a asp-controller="Home" asp-action="Index" style="text-align:left; color: white;" class="navbarText navbar-text">Home</a>
+                <a asp-controller="Home" asp-action="Index" style="text-align:left; color: white; font-size:15px;">Home</a>
             </li>
             @if (User.Identity.IsAuthenticated)
             {  
                 if (User.IsInRole("SysAdmin"))
                 {
                     <li class="nav-item">
-                        <a asp-controller="SysAdmin" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text ">Customer Operations </a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;">Customer Operations </a>
                     </li>                 
                     <li class="nav-item">
-                        <a asp-controller="SysAdmin" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text ">Product Operations</a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;">Product Operations</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="SysAdmin" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text">Brand Operations</a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;">Brand Operations</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="SysAdmin" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text">System Operations</a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;">System Operations</a>
                     </li>
                 }
                 if (User.IsInRole("Admin"))
                 {
                     <li class="nav-item">
-                        <a asp-controller="Admin" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text">Add Brand </a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;">Add Brand </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="Admin" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text">Update Brand</a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;">Update Brand</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="Admin" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text">Delete Brand</a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;">Delete Brand</a>
                     </li>
                 }
                 if (User.IsInRole("Customer"))
                 {
                     <li class="nav-item">
-                        <a asp-controller="Customer" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text"> Shop </a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;"> Shop </a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="Customer" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text">Add Product Comment</a>
+                        <a asp-controller="" asp-action="" style="text-align:left; color: white;font-size:15px;">Add Product Comment</a>
                     </li>           
                 }
             }
@@ -78,18 +64,18 @@
             @if (User.Identity.IsAuthenticated)
             {
                 <li class="nav-item">
-                    <a asp-controller="Account" asp-action="" style="text-align:left; color: white;"  class="navbarText navbar-text">
+                    <a asp-controller="Account" asp-action="" style="text-align:left; color: white;font-size:15px;">
                         @User.Identity.Name
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a asp-controller="Account" asp-action="Logout" style="text-align:left; color: white;"  class="navbarText navbar-text">Logout</a>
+                    <a asp-controller="Account" asp-action="Logout" style="text-align:left; color: white;font-size:15px;">Logout</a>
                 </li>
             }
             else
             {
                 <li class="nav-item">
-                    <a asp-controller="Account" asp-action="Login" style="text-align:left; color: white;"  class="navbarText navbar-text">Login</a>
+                    <a asp-controller="Account" asp-action="Login" style="text-align:left; color: white;font-size:15px;"  class="navbarText navbar-text">Login</a>
                 </li>      
             }
         </ul>
